--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
         <img src="./loader.svg" alt="">
       </div>
     </div>
-    <!-- built files will be auto injected -->
+    <script src="/__/firebase/7.23.0/firebase-app.js"></script>
+    <script src="/__/firebase/7.23.0/firebase-analytics.js"></script>
+    <script src="/__/firebase/init.js"></script>
   </body>
 </html>
